--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Portfolio of Shiva Saini, BCA student and aspiring full-stack web developer."/>
   <title>Shiva Saini - Web Developer</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.0/css/all.css">
+
+
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -124,12 +127,14 @@ My goal is to blend my expertise in web development with emerging technologies l
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Shiva Saini. All rights reserved.</p>
-    </div>
-  </footer>
+  <p>© 2025 Shiva Saini. All rights reserved.</p>
+  <div class="social-icons">
+    <a href="https://github.com/Shivasaini2006" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/shiva-saini-0a8b59247" target="_blank"><i class="fab fa-linkedin"></i></a>
+  </div>
+</footer>
+
 
 </body>
 </html>
