--- a/index.html
+++ b/index.html
@@ -1,140 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Portfolio of Shiva Saini, BCA student and aspiring full-stack web developer."/>
-  <title>Shiva Saini - Web Developer</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Shiva Saini - BCA Student & aspiring Full Stack Developer. Portfolio with projects, skills, achievements and contact." />
+  <title>Shiva Saini — Portfolio</title>
+
+  <!-- Font Awesome (icons) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.0/css/all.css">
-
-
   <script defer src="script.js"></script>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar glass">
-    <div class="container nav-container">
-      <div class="logo">MyPortfolio</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <div class="menu-toggle">&#9776;</div>
-      
+  <!-- NAV -->
+  <nav class="navbar" id="navbar">
+    <div class="nav-inner container">
+      <div class="logo">
+        <span class="logo-badge">S.S</span>
+        <span class="logo-text">Shiva Saini</span>
+      </div>
+
+      <button id="hamburger" class="hamburger" aria-label="Toggle menu">
+        <span></span><span></span><span></span>
+      </button>
+
+      <div class="nav-links" id="nav-links">
+        <a class="nav-link" href="#home">Home</a>
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#achievements">Achievements</a>
+        <a class="nav-link" href="#projects">Projects</a>
+        <a class="nav-link" href="#resume">Resume</a>
+        <a class="nav-link" href="#contact">Contact</a>
+        <div class="social-inline">
+          <a class="social" href="https://github.com/Shivasaini2006" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+          <a class="social" href="https://www.linkedin.com/in/shiva-saini-0a8b59247" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+        </div>
+       
+      </div>
+    </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- HERO -->
   <header id="home" class="hero">
-    <div class="container">
-      <h1 class="gradient-text">Shiva Saini</h1>
-      <p>BCA Student | Aspiring Full-Stack Developer</p>
-      <a href="#projects" class="btn-primary">See My Work</a>
+    <div class="hero-inner container">
+      <h1 class="hero-title"><span class="gradient-text">Shiva Saini</span></h1>
+      <p class="hero-sub">BCA Student | Aspiring Full-Stack Developer</p>
+      <p class="hero-desc">I build responsive, accessible web experiences — learning full-stack development and working on real-world projects.</p>
+      <div class="hero-ctas">
+        <button class="btn primary" onclick="scrollToSection('projects')">See My Work <i class="fa-solid fa-arrow-down"></i></button>
+        <a class="btn ghost" href="#contact">Get in Touch</a>
+      </div>
+    </div>
+
+    <div class="hero-shapes" aria-hidden="true">
+      <span class="shape s1"></span>
+      <span class="shape s2"></span>
+      <span class="shape s3"></span>
     </div>
   </header>
 
   <main>
-    <!-- About -->
-    <section id="about" class="glass">
-      <div class="about-content">
-        <img src="shivaimg.jpeg" alt="Portrait of Shiva Saini" loading="lazy"/>
-        <div class="about-description">
-          <p>
-            Hi, I’m a Bachelor of Computer Applications (BCA) student at Maharshi Dayanand University, Rohtak, with a strong passion for technology and problem-solving. My primary focus is on full-stack web development, where I’m learning to build responsive, dynamic, and user-friendly applications by combining modern front-end design with efficient back-end systems.
+    <!-- ABOUT -->
+    <section id="about" class="section">
+      <div class="container glass-panel">
+        <h2 class="section-title gradient-text">About</h2>
+        <div class="about-grid">
+          <div class="about-photo">
+            <div class="photo-frame">
+              <img src="shivaimg.jpeg" alt="Shiva Saini" loading="lazy">
+            </div>
+          </div>
+          <div class="about-body">
+            <p>I'm a Bachelor of Computer Applications (BCA) student at Maharshi Dayanand University, Rohtak, passionate about web development. Currently learning full-stack development to build responsive and dynamic web applications.</p>
 
-Beyond web development, I’m also exploring the exciting fields of Artificial Intelligence and Machine Learning, expanding my skill set to understand how intelligent systems are built and applied to real-world challenges.
+            <div class="about-info">
+              <div><strong>University:</strong> Maharshi Dayanand University, Rohtak</div>
+              <div><strong>Role:</strong> BCA Student / Web Developer</div>
+            </div>
 
-I’m an active member of Code Catalys, my college’s tech society, where I collaborate with peers, contribute to projects, and grow through hands-on learning and teamwork.
-
-My goal is to blend my expertise in web development with emerging technologies like AI/ML to create impactful, future-ready solutions.         </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills">
-      <div class="container">
-        <h2 class="section-title">Skills</h2>
-        <div class="skills-grid">
-          <div class="skill glass">HTML</div>
-          <div class="skill glass">CSS</div>
-          <div class="skill glass">JavaScript</div>
-          <div class="skill glass">C</div>
-          <div class="skill glass">C++</div>
-          <div class="skill glass">OOP</div>
-          <div class="skill glass">DSA</div>
-          <div class="skill glass">Python</div>
-          <div class="skill glass">SQL</div>        
-        </div>
-      </div>
-    </section>
-
-    <!-- Tools -->
-    <section id="tools">
-      <div class="container">
-        <h2 class="section-title">Tools</h2>
-        <div class="skills-grid">
-          <div class="skill glass">VS Code</div>
-          <div class="skill glass">GitHub</div>
-          <div class="skill glass">Unity</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects -->
-    <section id="projects">
-      <div class="container">
-        <h2 class="section-title">Projects</h2>
-        <div class="projects-grid">
-          <div class="project glass">
-            <h3>Custom Clearance Website</h3>
-            <p>
-              A fully responsive Custom Clearance website for a client as a freelancer.  
-              <strong>Technologies:</strong> HTML, CSS, JavaScript.
-            </p>
-            <div class="project-images">
-              <img src="front.png" alt="Front Page Screenshot" loading="lazy"/>
-              <img src="secondline.png" alt="Second Line Page" loading="lazy"/>
-              <img src="third.png" alt="Third Page" loading="lazy"/>
+            <div class="about-stats">
+              <div class="stat">
+                <div class="stat-num gradient-text">Projects</div>
+                <div class="stat-val">1+ (freelance)</div>
+              </div>
+              <div class="stat">
+                <div class="stat-num gradient-text">Learning</div>
+                <div class="stat-val">Full Stack</div>
+              </div>
+              <div class="stat">
+                <div class="stat-num gradient-text">Tools</div>
+                <div class="stat-val">VS Code · GitHub · Unity</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Resume -->
-     <center>
-   <section id="resume">
-  <h2>Resume</h2>
-  <a href="ShivaSaini.pdf" class="resume-btn" download>⬇ Download My Resume</a>
-</section>
-</center>
-
-    <!-- Contact -->
-    <section id="contact" class="glass">
-      <div class="container">
-        <h2 class="section-title">Contact</h2>
-        <div class="contact-info">
-          <p>📧 <a href="mailto:shivasaini1938@gmail.com">shivasaini1938@gmail.com</a></p>
-          <p>📱 <a href="tel:+919315303561">+91 9315303561</a></p>
+    <!-- SKILLS -->
+    <section id="skills" class="section">
+      <div class="container glass-panel">
+        <h2 class="section-title gradient-text">Skills & Tools</h2>
+        <div class="skills-grid">
+          <div class="skill"><div class="skill-name">HTML</div></div>
+          <div class="skill"><div class="skill-name">CSS</div></div>
+          <div class="skill"><div class="skill-name">JavaScript</div></div>
+          <div class="skill"><div class="skill-name">C</div></div>
+          <div class="skill"><div class="skill-name">C++</div></div>
+          <div class="skill"><div class="skill-name">Object Oriented Programming</div></div>
+          <div class="skill"><div class="skill-name">VS Code</div></div>
+          <div class="skill"><div class="skill-name">GitHub</div></div>
+          <div class="skill"><div class="skill-name">Unity</div></div>
         </div>
       </div>
     </section>
+
+    <!-- ACHIEVEMENTS -->
+    <section id="achievements" class="section">
+      <div class="container glass-panel">
+        <h2 class="section-title gradient-text">Achievements</h2>
+        <div class="achievements-grid">
+          <div class="achievement">
+            <i class="fa-solid fa-briefcase ach-icon"></i>
+            <h3>Freelance Project</h3>
+            <p>Built a responsive Custom Clearance website for a client using HTML, CSS, and JavaScript.</p>
+          </div>
+          <div class="achievement">
+            <i class="fa-solid fa-flag ach-icon"></i>
+            <h3>5+ Mini Projects</h3>
+            <p>Completed multiple mini-projects to practice front-end and core programming concepts.</p>
+          </div>
+          <div class="achievement">
+            <i class="fa-solid fa-graduation-cap ach-icon"></i>
+            <h3>Ongoing Learning</h3>
+            <p>Actively studying full-stack development and modern web technologies.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects" class="section">
+      <div class="container glass-panel">
+        <h2 class="section-title gradient-text">Featured Projects</h2>
+        <div class="projects-grid">
+          <div class="project-card">
+            <div class="project-image">
+              <img src="front.png" alt="Custom Clearance - front" loading="lazy">
+            </div>
+            <div class="project-content">
+              <h3>Custom Clearance Website</h3>
+              <p>A fully responsive Custom Clearance website delivered as freelance work. Technologies: HTML, CSS, JavaScript.</p>
+              <div class="project-gallery">
+                <img src="secondline.png" alt="page 2" loading="lazy">
+                <img src="third.png" alt="page 3" loading="lazy">
+                <img src="fourth.png" alt="page 4" loading="lazy">
+                <img src="fifth.png" alt="page 5" loading="lazy">
+              </div>
+            </div>
+          </div>
+
+          <!-- Add more projects if needed; placeholder using other images -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="sixth.png" alt="project preview" loading="lazy">
+            </div>
+            <div class="project-content">
+              <h3>Portfolio Screenshots</h3>
+              <p>Project screenshots and UI explorations. (Placeholders — replace as needed.)</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- RESUME -->
+    <section id="resume" class="section">
+      <center>
+        <div class="container glass-panel center">
+        <h2 class="section-title gradient-text">Resume</h2>
+        <a class="resume-btn" href="ShivaSaini.pdf" download>⬇ Download My Resume</a>
+      </div>
+      </center>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact" class="section">
+      <center>
+      <div class="container glass-panel">
+        <h2 class="section-title gradient-text">Contact</h2>
+        <div class="contact-grid">
+          <div class="contact-card">
+            <h3>Get in touch</h3>
+            <p>📧 <a href="mailto:shivasaini1938@gmail.com">shivasaini1938@gmail.com</a></p>
+            <p>📱 <a href="tel:+919315303561">+91 9315303561</a></p>
+          </div>
+        </div>
+      </div>
+      </center>
+    </section>
   </main>
 
-  <footer>
-  <p>© 2025 Shiva Saini. All rights reserved.</p>
-  <div class="social-icons">
-    <a href="https://github.com/Shivasaini2006" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/shiva-saini-0a8b59247" target="_blank"><i class="fab fa-linkedin"></i></a>
-  </div>
-</footer>
+  <!-- FOOTER -->
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-row">
+        <p>© 2025 Shiva Saini. All rights reserved.</p>
+        <div class="social-inline">
+          <a class="social" href="https://github.com/Shivasaini2006" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+          <a class="social" href="https://www.linkedin.com/in/shiva-saini-0a8b59247" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
 
 </body>
 </html>
