--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- ABOUT -->
     <section id="about" class="section">
       <div class="container glass-panel">
-        <h2 class="section-title gradient-text">About</h2>
+        <h2 class="section-title gradient-text">About Me </h2>
         <div class="about-grid">
           <div class="about-photo">
             <div class="photo-frame">
