--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
             </div>
           </div>
           <div class="about-body">
-            <p>I'm a Bachelor of Computer Applications (BCA) student at Maharshi Dayanand University, Rohtak, passionate about web development. Currently learning full-stack development to build responsive and dynamic web applications.</p>
+            <p>I’m a Bachelor of Computer Applications (BCA) student at Maharshi Dayanand University, Rohtak, with a strong passion for web development and building impactful digital experiences. Currently, I’m diving deep into full-stack development, sharpening my skills in creating responsive, user-friendly, and dynamic web applications.
+
+I enjoy transforming ideas into interactive solutions and continuously exploring modern tools, frameworks, and best practices in the web ecosystem. My goal is to grow as a versatile developer who not only writes clean, efficient code but also delivers meaningful products that make a difference.
+
+🚀 Always curious, always learning — and excited to collaborate on projects that challenge my creativity and technical skills.</p>
 
             <div class="about-info">
               <div><strong>University:</strong> Maharshi Dayanand University, Rohtak</div>
