--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="about-body">
             <p>I’m a Bachelor of Computer Applications (BCA) student at Maharshi Dayanand University, Rohtak, with a strong passion for web development and building impactful digital experiences. Currently, I’m diving deep into full-stack development, sharpening my skills in creating responsive, user-friendly, and dynamic web applications.</p>
             <div class="about-info">
-              <div><strong>University:</strong> Maharshi Dayanand University, Rohtak</div>
+              <div><strong>University:</strong> MDU </div>
               <div><strong>Role:</strong> BCA Student / Web Developer</div>
             </div>
           </div>
@@ -170,7 +170,7 @@
         <div class="container glass-panel">
           <h2 class="section-title gradient-text">Contact</h2>
           <p>📧 <a href="mailto:shivasaini1938@gmail.com">shivasaini1938@gmail.com</a></p>
-          <p>📱 <a href="tel:+919315303561">+91 9315303561</a></p>
+          <p><i class="fab fa-linkedin"></i>  <a href="https://www.linkedin.com/in/shiva-saini-0a8b59247" target="_blank">linkedin</a></p>
         </div>
       </center>
     </section>
