--- a/index.html
+++ b/index.html
@@ -125,34 +125,47 @@
       </div>
     </section>
 
-    <!-- PROJECTS -->
+   <!-- PROJECT 1 -->
     <section id="projects" class="section">
-      <div class="container glass-panel">
-        <h2 class="section-title gradient-text">Projects</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <div class="project-image-row">
-              <a href="front.png" data-lightbox="project1"><img src="front.png" alt="Project 1"></a>
-              <a href="secondline.png" data-lightbox="project1"><img src="secondline.png" alt="Project 1"></a>
-            </div>
-            <div class="project-content">
-              <h3>Custom Clearance Website</h3>
-              <p>A fully responsive freelance project built with HTML, CSS, and JavaScript.</p>
-            </div>
-          </div>
-          <div class="project-card">
-            <div class="project-image-row">
-              <a href="digi1.png" data-lightbox="project2"><img src="digi1.png" alt="Project 2"></a>
-              <a href="digi2.png" data-lightbox="project2"><img src="digi2.png" alt="Project 2"></a>
-            </div>
-            <div class="project-content">
-              <h3>Digital Pause</h3>
-              <p>A browser extension that helps users take a break from social media addiction.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h2 class="section-title gradient-text">Projects</h2>       
+<div class="project-row">
+  <div class="project-images">
+    <a href="front.png" data-lightbox="project1"><img src="front.png" alt="Project 1 Screenshot 1"></a>
+    <a href="secondline.png" data-lightbox="project1"><img src="secondline.png" alt="Project 1 Screenshot 2"></a>
+     <a href="third.png" data-lightbox="project1"><img src="secondline.png" alt="Project 1 Screenshot 2"></a>
+     <a href="seventh.png" data-lightbox="project1"><img src="secondline.png" alt="Project 1 Screenshot 2"></a>
+ 
+
+  </div>
+  <div class="project-desc">
+    <h3>Custom Clearance Website</h3>
+    <p>A fully responsive freelance project built with HTML, CSS, and JavaScript.</p>
+  </div>
+</div>
+
+<!-- PROJECT 2 -->
+<div class="project-row">
+  <div class="project-images">
+    <a href="digi1.png" data-lightbox="project2"><img src="digi1.png" alt="Project 2 Screenshot 1"></a>
+    <a href="digi2.png" data-lightbox="project2"><img src="digi2.png" alt="Project 2 Screenshot 2"></a>
+    <a href="digi5.png" data-lightbox="project2"><img src="digi5.png" alt="Project 2 Screenshot 2"></a>
+    <a href="digi4.png" data-lightbox="project2"><img src="digi4.png" alt="Project 2 Screenshot 2"></a>
+  
+  
+  
+  </div>
+  <div class="project-desc">
+    <h3>Digital Pause</h3>
+    <p> Developed a browser extension for a hackthon ”Code Vedha ”.</p>
+    <p>◦ Designed the frontend as a learner and Contributed in this .</p>
+    <p>
+ ◦ Digital Pause is a browser extension that interrupts addictive social media usage with mindful
+ exercises to help maintain focus and mental well-being</p>
+  </div>
+</div>
     </section>
+
+
 
     <!-- RESUME -->
     <section id="resume" class="section">
